[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = 3.8

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --doctest-modules"
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
testpaths = ["clugen", "tests"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
src_paths = ["clugen", "tests"]
line_length = 88
skip_gitignore = "True"
