[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclugen"
description = "Multidimensional cluster generation in Python"
version = "1.1.4"
authors = [ { name = "Nuno Fachada", email = "faken@fakenmc.com" } ]
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "multidimensional data",
    "synthetic clusters",
    "synthetic data generation",
    "synthetic data generator",
    "multidimensional clusters",
    "clustering" ]
license = {text = "MIT"}
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [ "numpy >= 1.20" ]

[project.optional-dependencies]
dev = [
    "black",
    "flake8 >= 6.0.0",
    "flake8-black",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-isort",
    "Flake8-pyproject",
    "flake8-pytest-style",
    "flake8-simplify",
    "isort",
    "matplotlib",
    "mypy",
    "mkdocs-gallery",
    "mkdocs-material",
    "mkdocstrings-python",
    "pandas",
    "pep8-naming",
    "pre-commit",
    "pytest >= 6.0",
    "coverage",
    "pytest-cov >= 3.0.0",
    "pytest-mypy",
    "scikit-learn",
    "seaborn" ]

[project.urls]
"Bug Reports" = "https://github.com/clugen/pyclugen/issues"
"Documentation" = "https://clugen.github.io/pyclugen/"
"Source" = "https://github.com/clugen/pyclugen/"

[tool.setuptools]
packages = ["pyclugen"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--mypy --doctest-modules"
norecursedirs = [
    "hooks",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__" ]
testpaths = ["pyclugen", "tests"]

[tool.black]
line-length = 88

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
src_paths = ["pyclugen", "tests"]
line_length = 88
skip_gitignore = "True"

[tool.flake8]
extend-select = ["B9", "C4"]
max-line-length = 88
max-doc-length = 88
ignore = [
    "B905",  # Force `strict` in zip(), but this requires Python 3.10
    "E203",  # "whitespace before ':'"", but that's how black likes it
    "W503" ] # "line break before binary operator", conflicts with black

doctests = true
exclude = [
    ".git",
    "__pycache__",
    ".*cache",
    "build",
    "dist",
    "env",
    "venv",
    ".eggs",
    "*.egg",
    "docs" ]
# flake8-docstrings
docstring-convention = "google"
