[metadata]
name = pyclugen
version = 0.0.1
author = Nuno Fachada
author_email = faken@fakenmc.com
description = Multidimensional cluster generation in Python
long_description = file: README.md, LICENSE
keywords = clusters, data generation, clustering, multidimensional
license = MIT
url = https://github.com/clugen/pyclugen

[options]
packages = clugen
python_requires = >= 3.8
install_requires =
    numpy >= 1.20

[options.extras_require]
dev =
    pytest >= 6.0
    mypy
    pytest-mypy
    flake8
    flake8-docstrings
    pdoc3

[flake8]
max-line-length = 88
max-doc-length = 88
doctests = True
exclude =
    .git,
    __pycache__,
    .*cache,
    build,
    dist,
    env,
    venv,
    .eggs,
    *.egg
# flake8-docstrings
docstring-convention = google
