[metadata]
name = pyclugen
version = 0.0.1
author = Nuno Fachada
author_email = faken@fakenmc.com
description = Multidimensional cluster generation in Python
long_description = file: README.md, LICENSE
keywords = clusters, data generation, clustering, multidimensional
license = MIT
url = https://github.com/clugen/pyclugen
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = clugen
python_requires = >= 3.8
install_requires =
    numpy >= 1.20

[options.extras_require]
dev =
    pytest >= 6.0
    mypy
    pytest-mypy
    flake8
    flake8-docstrings
    pdoc3

[flake8]
max-line-length = 88
max-doc-length = 88
doctests = True
exclude =
    .git,
    __pycache__,
    .*cache,
    build,
    dist,
    env,
    venv,
    .eggs,
    *.egg
# flake8-docstrings
docstring-convention = google
